[BUGFIX] Remove Scrollbar

--- a/Resources/Public/Css/navigation.less
+++ b/Resources/Public/Css/navigation.less
@@ -339,6 +339,7 @@ body {
                 background-position: center center;
                 border-left: 1px solid rgba(231, 231, 231, 0.7);
                 cursor: pointer;
+                overflow: hidden;
             }
             .nav-item {
                 padding-left: 5px;
