--- a/Resources/Public/Css/style.css
+++ b/Resources/Public/Css/style.css
@@ -11123,6 +11123,7 @@ body .sidebar .sidebarmenu a:hover::before {
     background-position: center center;
     border-left: 1px solid rgba(231, 231, 231, 0.7);
     cursor: pointer;
+    overflow: hidden;
   }
   body #sidebar .nav-item {
     padding-left: 5px;
@@ -11416,6 +11417,15 @@ body .groesser-150 {
 }
 body .gridelement {
   padding-bottom: 1em;
+}
+body .header-center {
+  text-align: center;
+}
+body .header-left {
+  text-align: left;
+}
+body .header-right {
+  text-align: right;
 }
 body hr {
   border: 0px;
